# donu-scheduler

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  design.md  index.html  legacy-gui-removal-plan.md  manual-test.md  new-ui-architecture.md  new-ui-to-logic-map.md  package-lock.json  package.json  pnpm-lock.yaml  refactor-plan.md  screens.md  workflow-logic-map.md
.github/workflows/: release-windows-x86_64.yml  release.yml
.opencode/skills/donu-schedule-deploy/: SKILL.md
src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_auto_updater.rs  db.rs  lib.rs  main.rs  models.rs  run_logs.rs  runtime_manager.rs
src-tauri/src/input_cache/: commands.rs
src-tauri/src/jobs/: commands.rs  mod.rs  repository.rs  scheduler.rs
src-tauri/src/profile_manager/: donutbrowser_client.rs  gpmglobal_client.rs  gpmlogin_client.rs  mod.rs
src-tauri/src/run_history/: commands.rs  repository.rs
src-tauri/src/runner/: mod.rs
src-tauri/src/running/: commands.rs
src-tauri/src/script_store/: commands.rs  mod.rs  repository.rs  types.rs
src-tauri/src/scripts/: commands.rs  repository.rs
src-tauri/src/settings/: commands.rs  repository.rs
src-tauri/src/test_runs/: commands.rs  repository.rs
src/components/: DashboardPage.tsx  DialogHost.tsx  FloatingField.tsx  JobDetailPage.tsx  JobsPage.tsx  LiveLogViewer.tsx  ProfilePickerDialog.tsx  RunHistoryPage.tsx  RunningPage.tsx  RuntimeToastHost.tsx  ScriptStorePage.tsx  ScriptsPage.tsx  SettingsPage.tsx  TestRunPage.tsx
src/hooks/: useMultiSelect.ts  useProfiles.ts  useTheme.ts  useWindowDrag.ts
src/styles/: index.css  responsive.css
src/utils/: cliArgs.ts  format.ts  historyGrouping.ts  profiles.ts  schedule.ts  scriptParser.ts
(+45 files in other folders)
