[package]
name = "donu-scheduler"
version = "0.7.9"
edition = "2021"

[lib]
name = "donu_scheduler_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = { version = "0.25", features = ["png"] }
ico = "0.5"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
dirs = "6"
rfd = "0.15"
sha2 = "0.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"
